[metadata]
name = ghosttrace-osint
version = 1.0.1
author = YourName
author_email = youremail@gmail.com
description = OSINT Recon Engine — IP, Domain, Username Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YOURUSERNAME/ghosttrace
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.28.0
    python-dotenv>=1.0.0

[options.entry_points]
console_scripts =
    ghosttrace = ghosttrace.__main__:main